syntax = "proto3";

package demo;

import "google/protobuf/wrappers.proto";

service BookService {
  rpc List(ListBookRequest) returns (ListBookResponse) {}
  rpc FindById(google.protobuf.Int64Value) returns (Book) {}
}

message ListBookRequest {}

message ListBookResponse {
  repeated Book books = 1;
}

message Book {
  int64 id = 1;
  string title = 2;
  string author = 3;
}
